# OpenIris-ESPIDF

./: openiris_debug_frame.jls  sdkconfig
.claude/: settings.local.json
boards/project_babble/quest_pro/: project_babble
boards/seed_studio/quest_pro/: xiao_esp32s3
components/CameraManager/CameraManager/: CameraManager.cpp  CameraManager.hpp
components/CommandManager/CommandManager/: CommandManager.cpp  CommandManager.hpp  CommandSchema.hpp
components/CommandManager/CommandManager/commands/: camera_commands.cpp  camera_commands.hpp
components/JpegLsEncoder/: CMakeLists.txt
components/JpegLsEncoder/JpegLsEncoder/: jpegls_encoder.cpp  jpegls_encoder.h  jpegls_tables.h
components/ProjectConfig/ProjectConfig/: Models.hpp  ProjectConfig.cpp  ProjectConfig.hpp
components/StreamServer/: CMakeLists.txt
components/StreamServer/StreamServer/: StreamServer.cpp  StreamServer.hpp
components/UVCStream/: CMakeLists.txt
components/UVCStream/UVCStream/: UVCStream.cpp  UVCStream.hpp
tools/: jpegls_viewer.py  switchBoardType.py
